<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.chartacaeli</groupId>
	<artifactId>chartacaeli-app</artifactId>
	<!-- ${git-commit} -->
	<version>0242</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<git-commit>0242</git-commit>
	</properties>
	<build>
		<defaultGoal>compile</defaultGoal>
		<sourceDirectory>${basedir}/org/chartacaeli</sourceDirectory>
		<outputDirectory>${basedir}/web/WEB-INF/classes</outputDirectory>
		<directory>${basedir}</directory>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
				<excludes>
					<exclude>**/gpu/tst/</exclude>
				</excludes>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<targetPath>${basedir}/web/lib</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}</directory>
				<includes>
					<include>chartacaeli.preferences</include>
					<include>chartacaeli.xsd</include>
				</includes>
			</resource>
			<resource>
				<targetPath>${basedir}/web/WEB-INF</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}</directory>
				<includes>
					<include>chartacaeli${shext}</include>
				</includes>
			</resource>
			<resource>
				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}/lib</directory>
				<includes>
					<include>castor.properties</include>
					<include>chartacaeli.properties</include>
					<include>chartacaeli_de.properties</include>
					<include>logging.properties</include>
				</includes>
			</resource>
			<resource>
				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}/lib</directory>
				<includes>
					<include>*.encoding</include>
					<include>*.ps</include>
				</includes>
			</resource>
			<resource>
				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}/lib</directory>
				<includes>
					<include>castor-core-1.3.3.jar</include>
					<include>castor-xml-1.3.3.jar</include>
					<include>commons-lang-2.6.jar</include>
					<include>commons-logging-1.2.jar</include>
					<include>commons-math3-3.5.jar</include>
					<include>jts-1.14.jar</include>
					<include>jtsio-1.14.jar</include>
					<include>runcc.jar</include>
					<include>pj2.jar</include>
				</includes>
			</resource>
			<resource>
				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}/org/chartacaeli/caa</directory>
				<includes>
					<include>${soprf}aaplus${soext}</include>
					<include>${soprf}caa${soext}</include>
				</includes>
			</resource>
			<resource>
				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}/lib</directory>
				<includes>
					<include>${soprf}EduRitGpuCuda${soext}</include>
				</includes>
			</resource>
			<resource>
				<targetPath>${basedir}/web/WEB-INF/lib</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}/org/chartacaeli/gpu</directory>
				<includes>
					<include>PJ2TextureMapperGpu.cubin</include>
					<include>PJ2TextureMapperGpu_f.cubin</include>
				</includes>
			</resource>
			<resource>
				<targetPath>${basedir}/web/WEB-INF/lib/cat/MCCM</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}/lib/cat/MCCM</directory>
				<includes>
					<include>cat_0000.con</include>
					<include>cat_0001.con</include>
					<include>cat_0002.con</include>
					<include>cat_0003.con</include>
					<include>cat_0004.con</include>
					<include>cat_0005.con</include>
					<include>cat_0006.con</include>
					<include>cat_0007.con</include>
					<include>cat_0008.con</include>
					<include>cat_0009.con</include>
					<include>cat_0010.con</include>
					<include>cat_0011.con</include>
				</includes>
			</resource>
		</resources>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.5</version>
		</dependency>
		<dependency>
			<groupId>castor-core-1.3.3.jar</groupId>
			<artifactId>castor-core-1.3.3</artifactId>
			<version>${git-commit}</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/castor-core-1.3.3.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>castor-xml-1.3.3.jar</groupId>
			<artifactId>castor-xml-1.3.3</artifactId>
			<version>${git-commit}</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/castor-xml-1.3.3.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>jts-1.14.jar</groupId>
			<artifactId>jts</artifactId>
			<version>${git-commit}</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/jts-1.14.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>jtsio-1.14.jar</groupId>
			<artifactId>jtsio</artifactId>
			<version>${git-commit}</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/jtsio-1.14.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>runcc.jar</groupId>
			<artifactId>runcc</artifactId>
			<version>${git-commit}</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/runcc.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>pj2.jar</groupId>
			<artifactId>pj2</artifactId>
			<version>${git-commit}</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/pj2.jar</systemPath>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>winos</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<properties>
				<soprf/>
				<soext>.dll</soext>
				<shext>.bat</shext>
			</properties>
		</profile>
		<profile>
			<id>linus</id>
			<activation>
				<os>
					<family>unix</family>
				</os>
			</activation>
			<properties>
				<soprf>lib</soprf>
				<soext>.so</soext>
				<shext>.sh</shext>
			</properties>
		</profile>
	</profiles>
</project>
